--- a/index.html
+++ b/index.html
@@ -16,31 +16,46 @@
   <body>
     <header class="cabecera">
       <a href="index.html">
-        <img src="assets/img/Logo.jpeg" alt="Logo" />
+        <img src="assets/img/logo.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toogle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarWithDropdown">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="pages/novedades.html">Novedades</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link"  href="pages/catalogo.html">Catálogo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="pages/artesanal.html">Artesanal</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="pages/contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarWithDropdown"
+          aria-controls="navbarWithDropdown"
+          aria-expanded="false"
+          aria-label="Toogle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarWithDropdown">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html"
+                >Inicio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="pages/novedades.html"
+                >Novedades</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/catalogo.html">Catálogo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/artesanal.html">Artesanal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pages/contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
     <main>
@@ -50,8 +65,13 @@
             <h1>Khali Design</h1>
             <p>"Papelería & Deco"</p>
           </div>
-          <div class="Nosotros">
-            <h2>Sobre Nosotros</h2>
+          <div class="bienvenidos">
+            <h2>
+              BIENVENIDOS
+            </h2>
+          </div>
+          <div class="nosotros">
+            <h3>Sobre Nosotros</h3>
             <p>
               Khali Design es un emprendimiento personal dedicado a los
               artículos de papelería, tanto fabricado artesanamlente por
@@ -62,15 +82,15 @@
       </section>
     </main>
     <footer>
-      <div class="Redes">
+      <div class="redes">
         <a href="https://www.instagram.com/khalidesing.uy/">
-          <img src="assets/img/Instagram.png" alt="Instagram" />
+          <img src="assets/img/instragram-logo.png" alt="instagram" />
         </a>
         <a href="https://twitter.com/GerCV15">
-          <img src="assets/img/Twitter.png" alt="Twitter" />
+          <img src="assets/img/twitter-logo.png" alt="twitter" />
         </a>
         <a href="https://www.facebook.com/german.cametoviera">
-          <img src="assets/img/Facebook.png" alt="Facebook" />
+          <img src="assets/img/facebook-logo.png" alt="facebook" />
         </a>
       </div>
       <p>Copyright 2023 &copy; Realizado Comisión 42865</p>
