--- a/pages/artesanal.html
+++ b/pages/artesanal.html
@@ -15,7 +15,7 @@
   <body>
     <header class="cabecera">
       <a href="../index.html">
-        <img src="../assets/img/Logo.jpeg" alt="Logo" />
+        <img src="../assets/img/logo.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toogle navigation">
@@ -49,8 +49,8 @@
         <div class="productos-artesanales">
           <div class="card">
             <img
-              src="../assets/img/Libreta Harry Potter.png"
-              alt="Libretas Harry Potter"
+              src="../assets/img/libreta-harry-potter.png"
+              alt="libretas-harry-potter"
             />
             <div class="card-body">
               <h3>Libretas Harry Potter</h3>
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="../assets/img/Blocks de Notas.png" alt="Blocks de Notas" />
+            <img src="../assets/img/blocks-de-notas.png" alt="blocks-de-notas" />
             <div class="card-body">
               <h3>Blocks de notas</h3>
               <p>
@@ -72,8 +72,8 @@
           </div>
           <div class="card">
             <img
-              src="../assets/img/Planificadores Semanales.png"
-              alt="Planificadores Semanales"
+              src="../assets/img/planificadores-semanales.png"
+              alt="planificadores-semanales"
             />
             <div class="card-body">
               <h3>Planificadores Semanales</h3>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="../assets/img/Recetarios.png" alt="Recetarios" />
+            <img src="../assets/img/recetarios-personalizados.png" alt="recetarios" />
             <div class="card-body">
               <h3>Recetarios</h3>
               <p>
@@ -93,15 +93,15 @@
       </section>
     </main>
     <footer>
-      <div class="Redes">
+      <div class="redes">
         <a href="https://www.instagram.com/khalidesing.uy/">
-          <img src="../assets/img/Instagram.png" alt="Instagram" />
+          <img src="../assets/img/instragram-logo.png" alt="instagram" />
         </a>
         <a href="https://twitter.com/GerCV15">
-          <img src="../assets/img/Twitter.png" alt="Twitter" />
+          <img src="../assets/img/twitter-logo.png" alt="twitter" />
         </a>
         <a href="https://www.facebook.com/german.cametoviera">
-          <img src="../assets/img/Facebook.png" alt="Facebook" />
+          <img src="../assets/img/facebook-logo.png" alt="facebook" />
         </a>
       </div>
       <p>Copyright 2023 &copy; Realizado Comisión 42865</p>
