--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -15,7 +15,7 @@
   <body>
     <header class="cabecera">
       <a href="../index.html">
-        <img src="../assets/img/Logo.jpeg" alt="Logo" />
+        <img src="../assets/img/logo.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toogle navigation">
@@ -48,7 +48,7 @@
         <h2>Nuestros Productos</h2>
         <div class="nuestros-productos">
           <div class="card">
-            <img src="../assets/img/Cintas.png" alt="Cintas" />
+            <img src="../assets/img/cintas.png" alt="cintas" />
             <div class="card-body">
               <h3>Cintas</h3>
               <p>
@@ -58,7 +58,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="../assets/img/Fibras.png" alt="Fibras" />
+            <img src="../assets/img/fibras.png" alt="fibras" />
             <div class="card-body">
               <h3>Fibras</h3>
               <p>
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="../assets/img/Lapiceras.png" alt="Lapiceras" />
+            <img src="../assets/img/lapiceras.png" alt="lapiceras" />
             <div class="card-body">
               <h3>Lapiceras</h3>
               <p>
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="../assets/img/Resaltadores.png" alt="Resaltadores" />
+            <img src="../assets/img/resaltadores-varios.png" alt="resaltadores" />
             <div class="card-body">
               <h3>Resaltadores</h3>
               <p>
@@ -91,15 +91,15 @@
       </section>
     </main>
     <footer>
-      <div class="Redes">
+      <div class="redes">
         <a href="https://www.instagram.com/khalidesing.uy/">
-          <img src="../assets/img/Instagram.png" alt="Instagram" />
+          <img src="../assets/img/instragram-logo.png" alt="instagram" />
         </a>
         <a href="https://twitter.com/GerCV15">
-          <img src="../assets/img/Twitter.png" alt="Twitter" />
+          <img src="../assets/img/twitter-logo.png" alt="twitter" />
         </a>
         <a href="https://www.facebook.com/german.cametoviera">
-          <img src="../assets/img/Facebook.png" alt="Facebook" />
+          <img src="../assets/img/facebook-logo.png" alt="facebook" />
         </a>
       </div>
       <p>Copyright 2023 &copy; Realizado Comisión 42865</p>
