--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,7 @@
   <body>
     <header class="cabecera">
       <a href="../index.html">
-        <img src="../assets/img/Logo.jpeg" alt="Logo" />
+        <img src="../assets/img/logo.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toogle navigation">
@@ -57,15 +57,15 @@
       <section>
     </main>
     <footer>
-      <div class="Redes">
+      <div class="redes">
         <a href="https://www.instagram.com/khalidesing.uy/">
-          <img src="../assets/img/Instagram.png" alt="Instagram" />
+          <img src="../assets/img/instragram-logo.png" alt="instagram" />
         </a>
         <a href="https://twitter.com/GerCV15">
-          <img src="../assets/img/Twitter.png" alt="Twitter" />
+          <img src="../assets/img/twitter-logo.png" alt="twitter" />
         </a>
         <a href="https://www.facebook.com/german.cametoviera">
-          <img src="../assets/img/Facebook.png" alt="Facebook" />
+          <img src="../assets/img/facebook-logo.png" alt="facebook" />
         </a>
       </div>
       <p>Copyright 2023 &copy; Realizado Comisión 42865</p>
