--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -15,7 +15,7 @@
   <body>
     <header class="cabecera">
       <a href="../index.html">
-        <img src="../assets/img/Logo.jpeg" alt="Logo" />
+        <img src="../assets/img/logo.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toogle navigation">
@@ -47,40 +47,40 @@
       <section class="novedades">
         <h2>Próximos arribos</h2>
         <div class="proximos-arribos">
-          <div class="card">
-            <img src="../assets/img/Box Dinosaurio.png" alt="Box Dinosaurio" />
+          <article class="card">
+            <img src="../assets/img/box-dinosaurio.png" alt="box-dinosaurio" />
             <div class="card-body">
               <h3>Box Dinosaurio</h3>
               <p>Próximamente</p>
             </div>
-          </div>
-          <div class="card">
-            <img src="../assets/img/Box Sirena.png" alt="Box Sirena" />
+          <article/>
+          <article class="card">
+            <img src="../assets/img/box-sirena.png" alt="box-sirena" />
             <div class="card-body">
               <h3>Box Sirena</h3>
               <p>Próximamente</p>
             </div>
-          </div>
-          <div class="card">
-            <img src="../assets/img/Box Unicornio.png" alt="Box Unicornio" />
+          <article/>
+          <article class="card">
+            <img src="../assets/img/box-unicornio.png" alt="box-unicornio" />
             <div class="card-body">
               <h3>Box Unicornio</h3>
               <p>Próximamente</p>
             </div>
-          </div>
+          <article/>
         </div>
       </section>
     </main>
     <footer>
-      <div class="Redes">
+      <div class="redes">
         <a href="https://www.instagram.com/khalidesing.uy/">
-          <img src="../assets/img/Instagram.png" alt="Instagram" />
+          <img src="../assets/img/instragram-logo.png" alt="instagram" />
         </a>
         <a href="https://twitter.com/GerCV15">
-          <img src="../assets/img/Twitter.png" alt="Twitter" />
+          <img src="../assets/img/twitter-logo.png" alt="twitter" />
         </a>
         <a href="https://www.facebook.com/german.cametoviera">
-          <img src="../assets/img/Facebook.png" alt="Facebook" />
+          <img src="../assets/img/facebook-logo.png" alt="facebook" />
         </a>
       </div>
       <p>Copyright 2023 &copy; Realizado Comisión 42865</p>
