Agregado de html y css

--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="pages/novedades.html"
-                >Novedades</a
+              <a class="nav-link" aria-current="page" href="pages/resenias.html"
+                >Reseñas</a
               >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pages/catalogo.html">Catálogo</a>
             </li>
+            <li class="nav-item"></li>
             <li class="nav-item">
-              <a class="nav-link" href="pages/artesanal.html">Artesanal</a>
+              <a class="nav-link" href="pages/proceso-de-personalizacion.html"
+                >Proceso de Prsonalización</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pages/contacto.html">Contacto</a>
@@ -59,24 +59,61 @@
       </nav>
     </header>
     <main>
-      <section>
-        <div class="div1">
-          <div class="div2">
-            <h1>Khali Design</h1>
-            <p>"Papelería & Deco"</p>
-          </div>
-          <div class="bienvenidos">
-            <h2>
-              BIENVENIDOS
-            </h2>
-          </div>
-          <div class="nosotros">
-            <h3>Sobre Nosotros</h3>
+      <section id="hero">
+        <h1>Khali Desing <br />Papelería & Deco</h1>
+        <button>Conócenos</button>
+      </section>
+      <section id="quienes-somos">
+        <div class="container">
+          <div class="img-container"></div>
+          <div class="text">
+            <h2>¿Quiénes Somos?</h2>
             <p>
-              Khali Design es un emprendimiento personal dedicado a los
-              artículos de papelería, tanto fabricado artesanamlente por
-              nosotros como de venta comercial.
+              Khali Design es un emprendimiento personal que se especializa en
+              la creación de artículos de papelería personalizados. Nos
+              dedicamos a proporcionar a nuestros clientes productos únicos y
+              distintivos que reflejen su identidad. Además, ofrecemos una
+              selección de artículos de papelería de venta comercial de alta
+              calidad.
             </p>
+          </div>
+        </div>
+      </section>
+      <section id="algunos-articulos">
+        <div class="container">
+          <h2>Algunos Artículos</h2>
+          <div class="articulos">
+            <div class="card">
+              <h3>Box Dinosaurio</h3>
+              <p>
+                Sumérgete en una emocionante aventura jurásica con nuestra caja
+                temática de dinosaurios. Descubre réplicas de fósiles, libros
+                ilustrados y juegos de excavación. ¡Regala diversión
+                prehistórica!
+              </p>
+              <button>Contenido</button>
+            </div>
+            <div class="card">
+              <h3>Box Sirena</h3>
+              <p>
+                Sumérgete en un mundo mágico bajo el mar con nuestra encantadora
+                caja temática de sirenas. Descubre accesorios brillantes, joyas
+                marinas y hermosas ilustraciones. ¡Deja volar tu imaginación y
+                sé una verdadera sirena!
+              </p>
+              <button>Contenido</button>
+            </div>
+            <div class="card">
+              <h3>Box Unicornio</h3>
+              <p>
+                Descubre un mundo mágico con nuestra caja temática de
+                unicornios. Sumérgete en colores vibrantes, accesorios
+                encantadores y déjate llevar por la magia de estos seres
+                legendarios. ¡Embárcate en una aventura llena de fantasía y
+                encanto!
+              </p>
+              <button>Contenido</button>
+            </div>
           </div>
         </div>
       </section>
