--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../pages/novedades.html">Novedades</a>
+                <a class="nav-link" aria-current="page" href="../pages/resenias.html">Reseñas</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link"  href="../pages/catalogo.html">Catálogo</a>
@@ -44,10 +44,10 @@
     </header>
     <main>
       <h1>Catálogo</h1>
-      <section class="catalogo">
+      <section id="catalogo">
         <h2>Nuestros Productos</h2>
         <div class="nuestros-productos">
-          <div class="card">
+          <article>
             <img src="../assets/img/cintas.png" alt="cintas" />
             <div class="card-body">
               <h3>Cintas</h3>
@@ -56,8 +56,8 @@
                 encuentre el de su preferencia.
               </p>
             </div>
-          </div>
-          <div class="card">
+          </article>
+          <article>
             <img src="../assets/img/fibras.png" alt="fibras" />
             <div class="card-body">
               <h3>Fibras</h3>
@@ -65,8 +65,8 @@
                 En todos los colores y modelos, elija los que más le gusten.
               </p>
             </div>
-          </div>
-          <div class="card">
+          </article>
+          <article>
             <img src="../assets/img/lapiceras.png" alt="lapiceras" />
             <div class="card-body">
               <h3>Lapiceras</h3>
@@ -75,8 +75,8 @@
                 como para utilizar en la oficina.
               </p>
             </div>
-          </div>
-          <div class="card">
+          </article>
+          <article>
             <img src="../assets/img/resaltadores-varios.png" alt="resaltadores" />
             <div class="card-body">
               <h3>Resaltadores</h3>
@@ -86,7 +86,85 @@
                 gama de resaltadores color pastel.
               </p>
             </div>
-          </div>
+          </article>
+          <article>
+            <img
+              src="../assets/img/libreta-harry-potter.png"
+              alt="libretas-harry-potter"
+            />
+            <div class="card-body">
+              <h3>Libretas Harry Potter</h3>
+              <p>
+                Libretas de 50 hojas rayadas con diseños inspirados en la saga
+                de Harry Potter.
+              </p>
+            </div>
+          </article>
+          <article>
+            <img src="../assets/img/blocks-de-notas.png" alt="blocks-de-notas" />
+            <div class="card-body">
+              <h3>Blocks de notas</h3>
+              <p>
+                Diseños hechos a pedido para que sus notas tengan el mejor
+                estilo.
+              </p>
+            </div>
+          </article>
+          <article>
+            <img
+              src="../assets/img/planificadores-semanales.png"
+              alt="planificadores-semanales"
+            />
+            <div class="card-body">
+              <h3>Planificadores Semanales</h3>
+              <p>En tamaños y diseños hechos a su medida.</p>
+            </div>
+          </article>
+          <article>
+            <img src="../assets/img/recetarios-personalizados.png" alt="recetarios" />
+            <div class="card-body">
+              <h3>Recetarios</h3>
+              <p>
+                Dele un toque personalizado a todas esas recetas que atesora.
+              </p>
+            </div>
+          </article>
+          <article>
+            <img src="../assets/img/calendarios.jpg" alt="calendarios" />
+            <div class="card-body">
+              <h3>Calendarios</h3>
+              <p>
+                Organiza tu tiempo con estilo: descubre nuestros calendarios, donde la funcionalidad se combina con hermosos diseños para inspirar cada día del año.
+              </p>
+            </div>
+          </article>
+          <article>
+            <img src="../assets/img/pinturas.jpg" alt="pinturas" />
+            <div class="card-body">
+              <h3>Pinturas</h3>
+              <p>
+                Descubre la magia de las pinturas: colores que cobran vida y emociones que se desbordan en cada trazo.
+              </p>
+            </div>
+          </article>
+          <article>
+            <img src="../assets/img/cartulinas.jpg" alt="cartulinas" />
+            <div class="card-body">
+              <h3>Cartulinas</h3>
+              <p>
+                Explora un mundo de posibilidades creativas con nuestras cartulinas: la base perfecta para dar vida a tus ideas con colores vibrantes y texturas cautivadoras.
+              </p>
+            </div>
+          </article>
+          <article>
+            <img src="../assets/img/agendas.jpg" alt="agendas" />
+            <div class="card-body">
+              <h3>Agendas</h3>
+              <p>
+                Planea tu vida con elegancia: nuestras agendas son el compañero perfecto para organizar tus metas, eventos y momentos especiales con estilo y practicidad.
+              </p>
+            </div>
+          </article>
         </div>
       </section>
     </main>
