--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,13 +27,13 @@
                 <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../pages/novedades.html">Novedades</a>
+                <a class="nav-link" aria-current="page" href="../pages/resenias.html">Reseñas</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link"  href="../pages/catalogo.html">Catálogo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/artesanal.html">Artesanal</a>
+                <a class="nav-link" href="../pages/proceso-de-personalizacion.html">Proceso de Prsonalización</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../pages/contacto.html">Contacto</a>
@@ -47,7 +47,7 @@
       <section>
       <form>
         <label for="formControlInput" class="form-label">Nombre y apellido</label>
-        <input type="nombre-apellido" class="form-control" id="formControlInput" placeholder="">
+        <input type="nombre-apellido" class="form-control" id="formControlInput" placeholder="John Doe">
         <label for="formControlInput" class="form-label">Correo electrónico</label>
         <input type="email" class="form-control" id="formControlInput" placeholder="name@example.com">
         <label for="floatingTextarea">Consulta</label>
