--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li class="nav-item"></li>
             <li class="nav-item">
               <a class="nav-link" href="pages/proceso-de-personalizacion.html"
-                >Proceso de Prsonalización</a
+                >Proceso de Personalización</a
               >
             </li>
             <li class="nav-item">
