--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,7 +33,7 @@
                 <a class="nav-link"  href="../pages/catalogo.html">Catálogo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/proceso-de-personalizacion.html">Proceso de Prsonalización</a>
+                <a class="nav-link" href="../pages/proceso-de-personalizacion.html">Proceso de Personalización</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../pages/contacto.html">Contacto</a>
