--- a/pages/proceso-de-personalizacion.html
+++ b/pages/proceso-de-personalizacion.html
@@ -52,7 +52,7 @@
               <a
                 class="nav-link"
                 href="../pages/proceso-de-personalizacion.html"
-                >Proceso de Prsonalización</a
+                >Proceso de Personalización</a
               >
             </li>
             <li class="nav-item">
