agregado de SASS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <header class="cabecera">
@@ -59,11 +59,11 @@
       </nav>
     </header>
     <main>
-      <section id="hero">
+      <section class="hero">
         <h1>Khali Desing <br />Papelería & Deco</h1>
         <button>Conócenos</button>
       </section>
-      <section id="quienes-somos">
+      <section class="quienes-somos">
         <div class="container">
           <div class="img-container"></div>
           <div class="text">
@@ -79,7 +79,7 @@
           </div>
         </div>
       </section>
-      <section id="algunos-articulos">
+      <section class="algunos-articulos">
         <div class="container">
           <h2>Algunos Artículos</h2>
           <div class="articulos">
