--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -10,7 +10,7 @@
     rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
     crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
     <header class="cabecera">
@@ -44,7 +44,7 @@
     </header>
     <main>
       <h1>Catálogo</h1>
-      <section id="catalogo">
+      <section class="catalogo">
         <h2>Nuestros Productos</h2>
         <div class="nuestros-productos">
           <article>
