--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -15,7 +15,7 @@
   <body>
     <header class="cabecera">
       <a href="../index.html">
-        <img src="../assets/img/logo.jpeg" alt="logo" />
+        <img src="../assets/img/logo-img.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toogle navigation">
@@ -48,7 +48,7 @@
         <h2>Nuestros Productos</h2>
         <div class="nuestros-productos">
           <article>
-            <img src="../assets/img/cintas.png" alt="cintas" />
+            <img src="../assets/img/cintas-img.png" alt="cintas" />
             <div class="card-body">
               <h3>Cintas</h3>
               <p>
@@ -58,7 +58,7 @@
             </div>
           </article>
           <article>
-            <img src="../assets/img/fibras.png" alt="fibras" />
+            <img src="../assets/img/fibras-img.png" alt="fibras" />
             <div class="card-body">
               <h3>Fibras</h3>
               <p>
@@ -67,7 +67,7 @@
             </div>
           </article>
           <article>
-            <img src="../assets/img/lapiceras.png" alt="lapiceras" />
+            <img src="../assets/img/lapiceras-img.png" alt="lapiceras" />
             <div class="card-body">
               <h3>Lapiceras</h3>
               <p>
