--- a/pages/proceso-de-personalizacion.html
+++ b/pages/proceso-de-personalizacion.html
@@ -16,7 +16,7 @@
   <body>
     <header class="cabecera">
       <a href="../index.html">
-        <img src="../assets/img/logo.jpeg" alt="logo" />
+        <img src="../assets/img/logo-img.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
         <button
