agregado de carpeta para mixins y correciones

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explora nuestro catálogo de productos de papelería artesanal y de venta comercial. Descubre una amplia variedad de artículos únicos, desde libretas y cintas decorativas hasta lapiceras y calendarios. Encuentra la inspiración que necesitas para expresar tu estilo y creatividad con Khali Desing."
+    />
+    <meta
+      name="keywords"
+      content="catálogo de productos, papelería artesanal, venta comercial, libretas, cintas decorativas, lapiceras, calendarios, productos únicos, expresión creativa, estilo personal, inspiración"
+    />
     <title>Catálogo</title>
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-    crossorigin="anonymous"/>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
@@ -18,28 +27,47 @@
         <img src="../assets/img/papeleria-logo.jpeg" alt="logo" />
       </a>
       <nav class="navbar navbar-expand-lg bg-transparent">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toogle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarWithDropdown">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../pages/resenias.html">Reseñas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link"  href="../pages/catalogo.html">Catálogo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/proceso-de-personalizacion.html">Proceso de Personalización</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarWithDropdown"
+          aria-controls="navbarWithDropdown"
+          aria-expanded="false"
+          aria-label="Toogle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarWithDropdown">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="../index.html"
+                >Inicio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="../pages/resenias.html"
+                >Reseñas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/catalogo.html">Catálogo</a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="../pages/proceso-de-personalizacion.html"
+                >Proceso de Personalización</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
     <main>
@@ -77,7 +105,10 @@
             </div>
           </article>
           <article>
-            <img src="../assets/img/resaltadores-varios.png" alt="resaltadores" />
+            <img
+              src="../assets/img/resaltadores-varios.png"
+              alt="resaltadores"
+            />
             <div class="card-body">
               <h3>Resaltadores</h3>
               <p>
@@ -101,7 +132,10 @@
             </div>
           </article>
           <article>
-            <img src="../assets/img/blocks-de-notas.png" alt="blocks-de-notas" />
+            <img
+              src="../assets/img/blocks-de-notas.png"
+              alt="blocks-de-notas"
+            />
             <div class="card-body">
               <h3>Blocks de notas</h3>
               <p>
@@ -121,7 +155,10 @@
             </div>
           </article>
           <article>
-            <img src="../assets/img/recetarios-personalizados.png" alt="recetarios" />
+            <img
+              src="../assets/img/recetarios-personalizados.png"
+              alt="recetarios"
+            />
             <div class="card-body">
               <h3>Recetarios</h3>
               <p>
@@ -134,7 +171,9 @@
             <div class="card-body">
               <h3>Calendarios</h3>
               <p>
-                Organiza tu tiempo con estilo: descubre nuestros calendarios, donde la funcionalidad se combina con hermosos diseños para inspirar cada día del año.
+                Organiza tu tiempo con estilo: descubre nuestros calendarios,
+                donde la funcionalidad se combina con hermosos diseños para
+                inspirar cada día del año.
               </p>
             </div>
           </article>
@@ -143,7 +182,8 @@
             <div class="card-body">
               <h3>Pinturas</h3>
               <p>
-                Descubre la magia de las pinturas: colores que cobran vida y emociones que se desbordan en cada trazo.
+                Descubre la magia de las pinturas: colores que cobran vida y
+                emociones que se desbordan en cada trazo.
               </p>
             </div>
           </article>
@@ -152,7 +192,9 @@
             <div class="card-body">
               <h3>Cartulinas</h3>
               <p>
-                Explora un mundo de posibilidades creativas con nuestras cartulinas: la base perfecta para dar vida a tus ideas con colores vibrantes y texturas cautivadoras.
+                Explora un mundo de posibilidades creativas con nuestras
+                cartulinas: la base perfecta para dar vida a tus ideas con
+                colores vibrantes y texturas cautivadoras.
               </p>
             </div>
           </article>
@@ -161,7 +203,9 @@
             <div class="card-body">
               <h3>Agendas</h3>
               <p>
-                Planea tu vida con elegancia: nuestras agendas son el compañero perfecto para organizar tus metas, eventos y momentos especiales con estilo y practicidad.
+                Planea tu vida con elegancia: nuestras agendas son el compañero
+                perfecto para organizar tus metas, eventos y momentos especiales
+                con estilo y practicidad.
               </p>
             </div>
           </article>
@@ -184,8 +228,8 @@
     </footer>
   </body>
   <script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-  crossorigin="anonymous"
-></script>
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"
+  ></script>
 </html>
