--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Sumérgete en el encanto de Khali Desing, donde encontrarás artículos de papelería personalizados y de venta comercial. Descubre productos únicos y de alta calidad que te permitirán expresar tu estilo y creatividad. ¡Explora nuestra tienda y encuentra algo especial para ti!"
+    />
+    <meta
+      name="keywords"
+      content="papelería artesanal, productos personalizados, artículos de venta comercial, diseño artesanal, papelería única, productos de calidad, creatividad, estilo personal, regalos personalizados, tienda de papelería, productos exclusivos, expresión personal"
+    />
     <title>Khali Desing</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
