--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contáctanos para obtener más información sobre nuestros productos de papelería artesanal y de venta comercial. Estamos aquí para responder a tus preguntas, atender tus consultas y brindarte el mejor servicio. Completa el formulario de contacto o utiliza nuestros datos de contacto para comunicarte directamente con nuestro equipo. ¡Esperamos poder ayudarte en Khali Desing!">
+    <meta name="keywords" content="contacto, consultas, servicio al cliente, productos de papelería, papelería artesanal, venta comercial, información de contacto, formulario de contacto, atención al cliente, equipo de soporte">
     <title>Contacto</title>
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
