--- a/pages/proceso-de-personalizacion.html
+++ b/pages/proceso-de-personalizacion.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Descubre nuestro proceso de personalización de productos de papelería artesanal y de venta comercial. Desde la elección de materiales hasta la incorporación de diseños únicos, te guiamos en cada paso para crear un artículo exclusivo que refleje tu estilo y personalidad. Explora cómo transformamos tus ideas en realidad con Khali Desing."
+    />
+    <meta
+      name="keywords"
+      content="personalización de productos, papelería artesanal, venta comercial, elección de materiales, diseños únicos, estilo personal, reflejar personalidad, ideas personalizadas, transformación de ideas, artículos exclusivos"
+    />
     <title>Proceso de Personalización</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -67,53 +75,54 @@
         <h1>Proceso de Personalización</h1>
         <p>
           En Khali Design, nos apasiona crear productos de papelería
-          personalizados que reflejen tu estilo y personalidad. Nuestro proceso de
-          personalización es cuidadoso y meticuloso, y garantiza que cada artículo
-          sea único y especial.
+          personalizados que reflejen tu estilo y personalidad. Nuestro proceso
+          de personalización es cuidadoso y meticuloso, y garantiza que cada
+          artículo sea único y especial.
         </p>
-  
+
         <h2>Paso 1: Selección del Producto</h2>
         <p>
           Explora nuestro catálogo y elige el producto de papelería que deseas
-          personalizar. Ofrecemos una amplia variedad de opciones, desde cuadernos
-          hasta tarjetas de felicitación.
+          personalizar. Ofrecemos una amplia variedad de opciones, desde
+          cuadernos hasta tarjetas de felicitación.
         </p>
-  
+
         <h2>Paso 2: Especificaciones de Personalización</h2>
         <p>
-          Una vez que hayas seleccionado tu producto, podrás proporcionar detalles
-          específicos sobre cómo deseas que se personalice. Puedes elegir el tipo
-          de letra, los colores, los elementos gráficos y cualquier otro detalle
-          que desees incluir.
+          Una vez que hayas seleccionado tu producto, podrás proporcionar
+          detalles específicos sobre cómo deseas que se personalice. Puedes
+          elegir el tipo de letra, los colores, los elementos gráficos y
+          cualquier otro detalle que desees incluir.
         </p>
-  
+
         <h2>Paso 3: Confirmación y Pago</h2>
         <p>
           Una vez que hayas especificado tus preferencias de personalización, te
           proporcionaremos un resumen detallado del pedido y el costo total.
-          Podrás revisarlo y realizar el pago de forma segura a través de nuestro
-          sistema de pago en línea.
+          Podrás revisarlo y realizar el pago de forma segura a través de
+          nuestro sistema de pago en línea.
         </p>
-  
+
         <h2>Paso 4: Personalización</h2>
         <p>
           Nuestro talentoso equipo de artistas y artesanos se encargará de dar
           vida a tu visión. Cada detalle será cuidadosamente trabajado a mano,
           asegurando la calidad y la excelencia en cada paso del proceso.
         </p>
-  
+
         <h2>Paso 5: Entrega</h2>
         <p>
           Una vez que tu producto personalizado esté listo, lo empaquetaremos
           cuidadosamente y te lo enviaremos a la dirección que nos hayas
-          proporcionado. Nos aseguraremos de que tu pedido llegue de manera segura
-          y puntual.
+          proporcionado. Nos aseguraremos de que tu pedido llegue de manera
+          segura y puntual.
         </p>
-  
+
         <p>
           Si tienes alguna pregunta adicional sobre nuestro proceso de
           personalización, no dudes en contactarnos. Estamos aquí para hacer
-          realidad tus ideas y ofrecerte productos de papelería que te encantarán.
+          realidad tus ideas y ofrecerte productos de papelería que te
+          encantarán.
         </p>
       </section>
     </main>
