--- a/pages/resenias.html
+++ b/pages/resenias.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Descubre las opiniones y reseñas de nuestros clientes sobre nuestros productos de papelería artesanal y de venta comercial. Lee las experiencias de quienes han encontrado calidad, originalidad y satisfacción en Khali Desing."
+    />
+    <meta
+      name="keywords"
+      content="reseñas, opiniones, testimonios, productos de papelería, artículos artesanales, venta comercial, satisfacción del cliente, calidad, originalidad, experiencias, feedback"
+    />
     <title>Reseñas</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -49,7 +57,11 @@
               <a class="nav-link" href="../pages/catalogo.html">Catálogo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/proceso-de-personalizacion.html">Proceso de Personalización</a>
+              <a
+                class="nav-link"
+                href="../pages/proceso-de-personalizacion.html"
+                >Proceso de Personalización</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/contacto.html">Contacto</a>
@@ -71,8 +83,8 @@
             <img src="../assets/img/sofia.jpg" alt="sofia" />
           </div>
           <p class="col-lg-8">
-            "¡Me encantan los productos de Khali Design! Recientemente compré
-            un hermoso cuaderno personalizado con mi nombre en la portada. La
+            "¡Me encantan los productos de Khali Design! Recientemente compré un
+            hermoso cuaderno personalizado con mi nombre en la portada. La
             atención al detalle y la calidad del trabajo artesanal son
             excepcionales. ¡Definitivamente recomendaría Khali Design para
             aquellos que buscan artículos de papelería únicos y de alta
@@ -99,9 +111,9 @@
             <img src="../assets/img/ana.jpg" alt="ana" />
           </div>
           <p class="col-lg-8">
-            "Khali Design es simplemente asombroso. Compré un set de papelería de
-            venta comercial que incluía bolígrafos, notas adhesivas y clips, y
-            estoy muy contenta con mi compra. Los productos son elegantes,
+            "Khali Design es simplemente asombroso. Compré un set de papelería
+            de venta comercial que incluía bolígrafos, notas adhesivas y clips,
+            y estoy muy contenta con mi compra. Los productos son elegantes,
             funcionales y de alta calidad. Es maravilloso poder encontrar todo
             lo que necesito en un solo lugar. Recomiendo encarecidamente los
             productos de Khali Design".
