--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -68,7 +72,7 @@
     </header>
     <main>
       <section class="hero">
-        <h1>Khali Desing <br />Papelería & Deco</h1>
+        <h1 class="animate__animated animate__fadeInDown">Khali Desing <br />Papelería & Deco</h1>
         <button>Conócenos</button>
       </section>
       <section class="quienes-somos">
